Canged name for system

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,4 +27,4 @@ packages =
 
 [options.entry_points]
 plover.system =
-	plover_vipe = plover_vipe.system
+	Vipe Norwegian steno = plover_vipe.system
